--- a/Activity_Module/style.css
+++ b/Activity_Module/style.css
@@ -194,11 +194,18 @@ section {
   }
     .info {
     line-height: 20px;
-    font-size: 13px;
+    font-size: 15px;
   }
   .Intro h1 {
   font-size: 60px;
   line-height: 70px;
 }
+  
+}
+@media (max-width: 600px) {
+  .Question {
+    width: 45%;
+    height: 220px;
+  }
 }
 
